# QuantFinanceCodingPortfolio

./: .gitignore  README.md
Counterparty Credit Risk Modeling/Credit Derivatives/: readMe.md
Counterparty Credit Risk Modeling/Credit Derivatives/CR1/: ._CR1.h  ._CR1_main.cpp  ._CR1_source.cpp  ._random.cpp  ._random.h  CR1.h  CR1_main.cpp  CR1_source.cpp  readMe.md
Counterparty Credit Risk Modeling/Credit Derivatives/CR2/: ._CR2.h  ._CR2_main.cpp  ._CR2_source.cpp  CR2_source.cpp
Counterparty Credit Risk Modeling/Equity Derivatives/: readMe.md
Counterparty Credit Risk Modeling/Equity Derivatives/EQ1/: ._EQ1.h  ._EQ1_main.cpp  ._EQ1_source.cpp  ._random.cpp  ._random.h  EQ1_main.cpp  EQ1_source.cpp  readMe.md
Counterparty Credit Risk Modeling/Equity Derivatives/EQ2/: ._EQ2.h  ._EQ2_main.cpp  ._EQ2_source.cpp  ._random.cpp  ._random.h  Advanced Example.md  EQ2.h  EQ2_source.cpp  random.h  readMe.md
Counterparty Credit Risk Modeling/Foreign Exchange Derivatives/: readMe.md
Counterparty Credit Risk Modeling/Foreign Exchange Derivatives/FX1/: ._FX.h  ._FX1_main.cpp  ._FX1_source.cpp  ._FX_print.cpp  ._matrix.h  FX.h  FX1_source.cpp  FX_print.cpp  matrix.h  readMe.md
Counterparty Credit Risk Modeling/Foreign Exchange Derivatives/FX2/: ._FX.h  ._FX2_main.cpp  ._FX2_source.cpp  ._FX_print.cpp  ._matrix.h  FX2_source.cpp  readMe.md
Counterparty Credit Risk Modeling/Interest Rate Derivatives/: Overview.md  readMe.md
Counterparty Credit Risk Modeling/Interest Rate Derivatives/IR1/: ._IR.h  ._IR1_main.cpp  ._IR1_source.cpp  ._matrix.h  ._random.cpp  ._random.h  IR1_source.cpp  readMe.md
Counterparty Credit Risk Modeling/Interest Rate Derivatives/IR2/: ._IR.h  ._IR2_main.cpp  ._IR2_source.cpp  ._matrix.h  ._random.cpp  ._random.h  IR.h  IR2_main.cpp  IR2_source.cpp
CounterpartyCreditRiskModeling/CreditDerivatives/CR1/: CMakeLists.txt  CR1_source.cpp
CounterpartyCreditRiskModeling/CreditDerivatives/CR2/: CMakeLists.txt  CR2_main.cpp  readME.md
CounterpartyCreditRiskModeling/EquityDerivatives/EQ1/: CMakeLists.txt  EQ1.h  EQ1_source.cpp  random.cpp
CounterpartyCreditRiskModeling/EquityDerivatives/EQ2/: CMakeLists.txt  EQ2_main.cpp  EQ2_source.cpp  readMe.md
CounterpartyCreditRiskModeling/ForeignExchangeDerivatives/FX1/: CMakeLists.txt  FX1_main.cpp  FX1_source.cpp  readMe.md
CounterpartyCreditRiskModeling/ForeignExchangeDerivatives/FX2/: CMakeLists.txt  FX2_main.cpp  FX2_source.cpp  matrix.h  readMe.md
CounterpartyCreditRiskModeling/InterestRateDerivatives/: readMe.md
CounterpartyCreditRiskModeling/InterestRateDerivatives/IR1/: CMakeLists.txt  IR1_main.cpp  IR1_source.cpp  matrix.h  readMe.md
CounterpartyCreditRiskModeling/InterestRateDerivatives/IR2/: CMakeLists.txt  IR2_source.cpp  matrix.h  readMe.md
Derivatives/CustomMatrixClassLibrary/: CMakelists.txt  eigen_matrix_matrix.cpp  eigen_matrix_reduction.cpp  eigen_matrix_scalar_arithmetic.cpp  eigen_matrix_scalar_mult_div.cpp  eigen_matrix_transposition.cpp  eigen_matrix_vector.cpp  main.cpp  matrix.cpp  matrix.h
Derivatives/EuropeanOptionsMonteCarlo/: CMakelists.txt  european_analytic.cpp  european_monte_carlo.cpp
Derivatives/ExoticOptionsMonteCarlo/: CMakelists.txt  asian.cpp  asian.h  main.cpp  option.cpp  option.h  path_generate.h
Derivatives/ImpliedVolatility/interval_bisection/: CMakeLists.txt  black_scholes.cpp  black_scholes.h  bs_prices.h  interval_bisection.h  main.cpp
Derivatives/ImpliedVolatility/newton_raphson/: CMakeLists.txt  black_scholes.cpp  black_scholes.h  bs_prices.h  main.cpp  newton_raphson.h
Derivatives/JumpDiffusionModel/: CMakeLists.txt  main.cpp
Derivatives/NumericLinearAlgebra/: CMakelists.txt  eigen_cholesky_decomposition.cpp  eigen_lu_decomposition.cpp  eigen_qr_decomposition.cpp  thomas.cpp
Derivatives/OptionGreeks/: CMakelists.txt  analytic_main.cpp  black_scholes.h  fdm_main.cpp  mc_main.cpp
Derivatives/PayOffDoubleDigital/: CMakelists.txt  payoff_double_digital.cpp  payoff_double_digital.h
Derivatives/RNGStatDistributions/rng/: CMakeLists.txt  lin_con_gen.cpp  lin_con_gen.h  main.cpp  makefile  random.h
Derivatives/RNGStatDistributions/stats/: CMakeLists.txt  main.cpp  makefile  statistics.cpp  statistics.h
Derivatives/SimpleMatrix/: CMakelists.txt  main.cpp  simple_matrix.cpp  simple_matrix.h
Derivatives/SingleFactorBlackScholesFDM/: CMakeLists.txt  fdm.cpp  fdm.h  main.cpp  option.cpp  option.h  pde.cpp  pde.h  spot_time_surface.py
Derivatives/StochasticVolatility/: CMakeLists.txt  correlated_snd.cpp  correlated_snd.h  csnd_main.cpp  csnd_makefile  heston_mc.cpp  heston_mc.h  main.cpp  makefile  option.cpp  option.h  payoff.h  statistics.cpp  statistics.h
Derivatives/VanillaOption/: CMakeLists.txt  main.cpp  makefile  vanilla_option.cpp  vanilla_option.h
Derivatives/chapter4/: main.cpp  makefile  payoff.cpp  payoff.h
Fixed_Income/: Zero Coupon Bond Curve Construction.ipynb
Portfolio Optimization/: Portfolio Optimization and Efficient Portfolio.ipynb
ValueAtRisk/: AAPL.csv  AMZN.csv  GOOG.csv  META.csv  NFLX.csv  Value_at_risk.ipynb
